--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mocha": "^8.2.1",
     "mongoose": "^5.11.9",
     "mongoose-gridfs": "^1.2.48",
-    "should": "^13.2.3"
+    "should": "^13.2.3",
+    "standard": "^16.0.3"
   },
   "devDependencies": {
     "mocha": "^8.2.1",
