--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -34,8 +34,8 @@ jobs:
 
     - name: Install dependencies
       run: npm install
-      run: npm ci
-
+      
+    - run: npm ci
     - run: npm run build --if-present
     - run: npm run standard
     - run: npm test
