--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongoose": "^5.11.9",
     "mongoose-gridfs": "^1.2.48",
     "should": "^13.2.3",
-    "standard": "^16.0.3"
+    "standard": "^16.0.3",
+    "nyc": "^15.1.0"
   },
   "devDependencies": {
     "mocha": "^8.2.1",
