--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose-gridfs": "^1.2.48",
     "should": "^13.2.3",
     "standard": "^16.0.3",
+    "multer": "^1.4.2",
     "nyc": "^15.1.0"
   },
   "devDependencies": {
