--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "mocha": "^8.2.1",
     "mongoose": "^5.11.9",
     "mongoose-gridfs": "^1.2.48",
-    "should": "^13.2.3",
-    "standard": "^16.0.3",
     "multer": "^1.4.2",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "should": "^13.2.3",
+    "standard": "^16.0.3"
   },
   "devDependencies": {
     "mocha": "^8.2.1",
